[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my-lib"
version = "0.1.0"
description = "My Python library"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.7"
dependencies = ["requests", "pandas"]

[tool.setuptools.packages.find]
where = ["."]
include = ["mylib*"]
