[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-lib"
version = "0.1.1"
description = "My sample timer library"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.7"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["mylib*"]
